--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ag-grid-react": "^32.0.2",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.10.4",
